--- a/index.html
+++ b/index.html
@@ -88,16 +88,15 @@
             </div>
         </div>
     </div>
-    <div class="section-reveiw container-fluid px-0 mx-0">
+    <div class="section-review container-fluid px-0 mx-0">
         <div class="row mx-0 d-flex gx-5">
             <div class="col-md-4 section-review-img px-0">
                 <div class="pl-5">
                     <img src="./assets/images/Mask Group 4.png" alt="" class="pl-5">
-
                 </div>
             </div>
-            <div class="col-md-6 section-review__review text-dark mr-5">
-                <h2 class="fw-bold">:) היי, נעים להכיר</h2>
+            <div class="col-md-6 section-review__review text-dark mr-5 d-flex flex-column justify-content-center">
+                <h2 class=" fw-bold">:) היי, נעים להכיר</h2>
                 <p>לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש בליא, מנסוטו צמלח לביקו ננבי, צמוקו בלוקריה שיצמה ברורק.
                     קוואזי במר מודוף.
                     אודיפו בלאסטיק מונופץ קליר, בנפת נפקט למסון בלרק - וענוף לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש
@@ -117,23 +116,66 @@
     </div>
     <div class="section-card container-fluid">
         <div class="row">
-            <div class="col-lg-8 mx-auto">
+            <div class="col-lg-7 mx-auto">
+                <h2 class="text-center fw-bold">#112A2D</h2>
                 <div class="row">
-                    <div class="col-lg-4"></div>
-                    <div class="col-lg-4"></div>
-                    <div class="col-lg-4"></div>
+                    <div class="col-lg-4">
+                        <div class="card rounded-0">
+                            <img src="./assets/images/Ellipse 4.png" class="card-img-top rounded-half alt=" ...">
+                            <div class="card-body text-center">
+                                <h5 class="card-title">קואוצ'ינג</h5>
+                                <p class="card-text">
+                                    לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית גולר מונפרר סוברט לורם שבצק
+                                    יהול, לכנוץ בעריר גק ליץ, ושבעגט ליבם
+                                    סולגק. בראיט ולחת צורק מונחף, בגורמי מגמש. תרבנך וסתעד לכנו סתשם השמה - לתכי מורגם
+                                    בורק? לתיג ישבעס.
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="card rounded-0">
+                            <img src="./assets/images/Ellipse 4.png" class="card-img-top rounded-half alt=" ...">
+                            <div class="card-body text-center">
+                                <h5 class="card-title">קואוצ'ינג</h5>
+                                <p class="card-text">
+                                    לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית גולר מונפרר סוברט לורם שבצק
+                                    יהול, לכנוץ בעריר גק ליץ, ושבעגט ליבם
+                                    סולגק. בראיט ולחת צורק מונחף, בגורמי מגמש. תרבנך וסתעד לכנו סתשם השמה - לתכי מורגם
+                                    בורק? לתיג ישבעס.
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="card rounded-0">
+                            <img src="./assets/images/Ellipse 4.png" class="card-img-top rounded-half alt=" ...">
+                            <div class="card-body text-center">
+                                <h5 class="card-title">קואוצ'ינג</h5>
+                                <p class="card-text">
+                                    לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית גולר מונפרר סוברט לורם שבצק
+                                    יהול, לכנוץ בעריר גק ליץ, ושבעגט ליבם
+                                    סולגק. בראיט ולחת צורק מונחף, בגורמי מגמש. תרבנך וסתעד לכנו סתשם השמה - לתכי מורגם
+                                    בורק? לתיג ישבעס.
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     <div class="section-opinion container-fluid" dir="ltr">
-        <div class="row d-flex">
+        <div class="row d-flex mb-40">
             <div class="col-md-4 section-opinion-img px-0">
                 <div class="">
                     <img src="./assets/images/Mask Group 8.png" alt="" class="">
                 </div>
             </div>
-            <div class="col-md-6 section-opinion__review text-dark" dir="rtl">
+            <div class="col-md-6 section-opinion__review text-dark d-flex flex-column justify-content-center" dir="rtl">
                 <h2 class="fw-bold">שם הרצאה ראשונה</h2>
                 <p>
                     לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש בליא, מנסוטו צמלח לביקו ננבי, צמוקו בלוקריה שיצמה ברורק.
@@ -146,7 +188,7 @@
                     סוליסי טידום בעליק.
                     קונדימנטום קורוס בליקרה, נונסטי קלובר בריקנה סטום, לפריקך תצטריק לרטי.
                 </p>
-                <button>
+                <button class="border-0">
                     להזמנה
                 </button>
             </div>
@@ -159,7 +201,7 @@
 
                 </div>
             </div>
-            <div class="col-md-6 section-opinion__review text-dark" dir="rtl">
+            <div class="col-md-6 section-opinion__review text-dark d-flex flex-column justify-content-center" dir="rtl">
                 <h2 class="fw-bold">שם הרצאה שניה</h2>
                 <p>
                     לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש בליא, מנסוטו צמלח לביקו ננבי, צמוקו בלוקריה שיצמה ברורק.
@@ -173,7 +215,7 @@
                     קונדימנטום קורוס בליקרה, נונסטי קלובר בריקנה סטום, לפריקך תצטריק לרטי.
                 </p>
 
-                <button>
+                <button class="border-0">
                     להזמנה
                 </button>
             </div>
