--- a/index.html
+++ b/index.html
@@ -72,19 +72,24 @@
     </nav>
     <div class="section-hero container-fluid  d-flex justify-content-center align-items-end">
         <div class="row">
-            <div class="mx-auto col-4 section-hero-content d-block text-end text-white -mt-5">
-                <h1 class=" ">אימון אישי</h1>
-                <p class=" text-end">קולהע צופעט למרקוח איבן איף, ברומץ כלרשט מיחוצים. קלאציסחטיר בלובק. תצטנפל בלינדו
-                    למרקל אס לכימפו,
-                    דול,
-                    צוט ומעיוט -
-                    לפתיעם ברשג - ולתיעם גדדיש. קוויז דומור ליאמום בלינך רוגצה.לפמעט מוסן מנת. לורם איפסום דולור סיט
-                    אמט,
-                    קונסקטורראדיפיסינג אלית. סת אלמנקום ניסי נון ניבאה. דס איאקוליס וולופטה דיאם. וסטיבולום אט דולור,
-                    קראס
-                    אגת לקטוס וואל
-                    אאוגו וסטיבולום סוליסי טידום בעליק. קונדימנטום קורוס בליקרה, נונסטי קלובר בריקנה סטום, לפריקך תצטריק
-                    לרטי.</p>
+            <div class="mx-auto col-lg-4 section-hero-content d-block">
+                <div class="col-12">
+                    <h1 class="mb-40">אימון אישי</h1>
+                    <p class="">קולהע צופעט למרקוח איבן איף, ברומץ כלרשט מיחוצים. קלאציסחטיר בלובק. תצטנפל בלינדו
+                        למרקל אס לכימפו,
+                        דול,
+                        צוט ומעיוט -
+                        לפתיעם ברשג - ולתיעם גדדיש. קוויז דומור ליאמום בלינך רוגצה.לפמעט מוסן מנת. לורם איפסום דולור
+                        סיט
+                        אמט,
+                        קונסקטורראדיפיסינג אלית. סת אלמנקום ניסי נון ניבאה. דס איאקוליס וולופטה דיאם. וסטיבולום אט
+                        דולור,
+                        קראס
+                        אגת לקטוס וואל
+                        אאוגו וסטיבולום סוליסי טידום בעליק. קונדימנטום קורוס בליקרה, נונסטי קלובר בריקנה סטום, לפריקך
+                        תצטריק
+                        לרטי.</p>
+                </div>
             </div>
         </div>
     </div>
@@ -115,9 +120,10 @@
         </div>
     </div>
     <div class="section-card container-fluid">
+        <h2 class="text-center fw-bold text-white mb-5">#112A2D</h2>
+
         <div class="row">
             <div class="col-lg-7 mx-auto">
-                <h2 class="text-center fw-bold">#112A2D</h2>
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="card rounded-0">
@@ -134,7 +140,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 mt-5">
                         <div class="card rounded-0">
                             <img src="./assets/images/Ellipse 4.png" class="card-img-top rounded-half alt=" ...">
                             <div class="card-body text-center">
