--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
     </div>
     <div class="section-review container-fluid px-0 mx-0">
-        <div class="row mx-0 d-flex gx-5">
+        <div class="row mx-0 d-flex gx-5 position-relative">
             <div class="col-md-4 section-review-img px-0">
                 <div class="pl-5">
                     <img src="./assets/images/Mask Group 4.png" alt="" class="pl-5">
@@ -117,10 +117,11 @@
                 <h2 class="fw-bold">
                     << מה אומרים עליי</h2>
             </div>
+            <img class="home-bird-left position-absolute" src="./assets/images/BIRD GREY.svg" alt="home-bird">
         </div>
     </div>
-    <div class="section-card container-fluid">
-        <h2 class="text-center fw-bold text-white mb-5">#112A2D</h2>
+    <div class="section-card container-fluid position-relative">
+        <h1 class="text-center fw-bold text-white">האימון שלי</h1>
 
         <div class="row">
             <div class="col-lg-7 mx-auto">
@@ -140,7 +141,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 mt-5">
+                    <div class="col-lg-4">
                         <div class="card rounded-0">
                             <img src="./assets/images/Ellipse 4.png" class="card-img-top rounded-half alt=" ...">
                             <div class="card-body text-center">
@@ -173,6 +174,7 @@
                 </div>
             </div>
         </div>
+        <img src="./assets/images/BIRD1.png" alt="" class="home-bird-right position-absolute">
     </div>
     <div class="section-opinion container-fluid" dir="ltr">
         <div class="row d-flex mb-40">
