--- a/help.html
+++ b/help.html
@@ -75,25 +75,56 @@
             <h1>כותרת / ציטוט</h1>
         </div>
     </div>
-    <div class="sblog-section-blog container-fluid">
-        <div class="row mx-0">
-            <div class="col-lg-6">
-                <div class="row">
-                    <div class="col-lg-4"></div>
-                    <div class="col-lg-4"></div>
-                    <div class="col-lg-4"></div>
+    <div class="help-section-carousel container-fluid">
+        <h1 class="text-center">?מה אומרים עליי</h1>
+        <div class="container">
+            <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="10000">
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <div class="card rounded-0 px-5 border-0">
+                                    <div class="card-body text-center">
+                                        <img src="./assets/images/bird.png" alt="">
+                                        <p class="card-text">
+                                            לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית גולר מונפרר סוברט לורם
+                                            שבצק יהול, לכנוץ בעריר גק ליץ, ושבעגט ליבם
+                                            סולגק. בראיט ולחת צורק מונחף, בגורמי מגמש. תרבנך וסתעד לכנו סתשם השמה - לתכי
+                                            מורגם בורק? לתיג ישבעס.
+                                        </p>
+                                        <img src="./assets/carousel3.png" alt="">
+                                        <p class="text-dark">
+                                            שם הממליץ
+                                        </p>
+                                        <p class="text-white">
+                                            מה התפקיד בשורה אחת
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="2000">
+                        <img src="./assets/images/Mask Group 8@2x.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./assets/images/Mask Group 4@2x.png" class="d-block w-100" alt="...">
+                    </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-12"></div>
-                </div>
-
-            </div>
-            <div class="col-lg-5">
-                <div class="sblog-section-blog__article"></div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
         </div>
     </div>
-    <div class="sblog-section-subscribe .container-fluid text-center">
+    <div class="sblog-section-subscribe container-fluid text-center">
         <h1>
             ?אהבת את מה שקראת
         </h1>
