active link bg added

--- a/help.html
+++ b/help.html
@@ -26,10 +26,10 @@
             <div class="collapse navbar-collapse flex-grow-0" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">דברו איתי</a>
+                        <a class="nav-link" href="index.html">דברו איתי</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">הרצאות וסדנאות</a>
+                        <a class="nav-link active" href="help.html">הרצאות וסדנאות</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">האימון שלי</a>
