home ready to review

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./assets/bootstrap-5.2.0-beta1-dist/css/bootstrap.min.css">
     <script src="./assets/bootstrap-5.2.0-beta1-dist/js/bootstrap.min.js" defer></script>
     <link rel="stylesheet" href="./assets/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -26,19 +28,23 @@
             <div class="collapse navbar-collapse flex-grow-0" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="index.html">דברו איתי</a>
+                        <a class="nav-link active px-3" href="index.html">דברו איתי</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="help.html">הרצאות וסדנאות</a>
+                        <a class="nav-link px-3" href="help.html">
+                            הרצאות וסדנאות
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">האימון שלי</a>
+                        <a class="nav-link px-3" href="gallery.html">האימון שלי</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">בלוג</a>
+                        <a class="nav-link px-3" href="single-block.html">בלוג</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">אודות</a>
+                        <a class="nav-link px-3" href="single-block-2.html">
+                            אודות
+                        </a>
                     </li>
                     <div class="social-links d-flex d-lg-none justify-content-between align-items-center">
                         <a href="#">
@@ -74,7 +80,7 @@
         <div class="row">
             <div class="mx-auto col-lg-4 section-hero-content d-block">
                 <div class="col-12">
-                    <h1 class="mb-40">אימון אישי</h1>
+                    <h1 class="mb-40 fst-italic">אימון אישי</h1>
                     <p class="">קולהע צופעט למרקוח איבן איף, ברומץ כלרשט מיחוצים. קלאציסחטיר בלובק. תצטנפל בלינדו
                         למרקל אס לכימפו,
                         דול,
@@ -101,21 +107,27 @@
                 </div>
             </div>
             <div class="col-md-6 section-review__review text-dark mr-5 d-flex flex-column justify-content-center">
-                <h2 class=" fw-bold">:) היי, נעים להכיר</h2>
+                <h2 class="fw-bold fst-italic text-end mb-2" dir='ltr'>:) היי, נעים להכיר</h2>
                 <p>לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש בליא, מנסוטו צמלח לביקו ננבי, צמוקו בלוקריה שיצמה ברורק.
                     קוואזי במר מודוף.
                     אודיפו בלאסטיק מונופץ קליר, בנפת נפקט למסון בלרק - וענוף לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש
                     בליא, מנסוטו צמלח לביקו
                 </p>
-                <p>
+                <p class="mb-2">
                     ננבי, צמוקו בלוקריה שיצמה ברורק. קולורס מונפרד אדנדום סילקוף, מרגשי ומרגשח. עמחליף קונסקטורר
                     אדיפיסינג אלית. סת אלמנקום
                     ניסי נון ניבאה. דס איאקוליס וולופטה דיאם. וסטיבולום אט דולור, קראס אגת לקטוס וואל אאוגו וסטיבולום
                     סוליסי טידום בעליק.
                     קונדימנטום קורוס בליקרה, נונסטי קלובר בריקנה סטום, לפריקך תצטריק לרטי.</p>
                 </p>
-                <h2 class="fw-bold">
-                    << מה אומרים עליי</h2>
+                <h5 class="fw-bold fst-italic text-end" dir='ltr'>
+                    &#171; מה אומרים עליי
+                </h5>
+                <button class="btn d-block border-0 text-white text-center">
+                    <span class="mx-auto">
+                        בואו נדבר
+                    </span>
+                </button>
             </div>
             <img class="home-bird-left position-absolute" src="./assets/images/BIRD GREY.svg" alt="home-bird">
         </div>
@@ -196,7 +208,7 @@
                     סוליסי טידום בעליק.
                     קונדימנטום קורוס בליקרה, נונסטי קלובר בריקנה סטום, לפריקך תצטריק לרטי.
                 </p>
-                <button class="border-0">
+                <button class="bg-transparent text-white border-0">
                     להזמנה
                 </button>
             </div>
@@ -223,7 +235,7 @@
                     קונדימנטום קורוס בליקרה, נונסטי קלובר בריקנה סטום, לפריקך תצטריק לרטי.
                 </p>
 
-                <button class="border-0">
+                <button class="bg-transparent text-white border-0">
                     להזמנה
                 </button>
             </div>
