--- a/help.html
+++ b/help.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./assets/bootstrap-5.2.0-beta1-dist/css/bootstrap.min.css">
     <script src="./assets/bootstrap-5.2.0-beta1-dist/js/bootstrap.min.js" defer></script>
     <link rel="stylesheet" href="./assets/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -26,19 +28,23 @@
             <div class="collapse navbar-collapse flex-grow-0" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">דברו איתי</a>
+                        <a class="nav-link px-3" href="index.html">דברו איתי</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="help.html">הרצאות וסדנאות</a>
+                        <a class="nav-link px-3 active" href="help.html">
+                            הרצאות וסדנאות
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">האימון שלי</a>
+                        <a class="nav-link px-3" href="gallery.html">האימון שלי</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">בלוג</a>
+                        <a class="nav-link px-3" href="single-block.html">בלוג</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">אודות</a>
+                        <a class="nav-link px-3" href="single-block-2.html">
+                            אודות
+                        </a>
                     </li>
                     <div class="social-links d-flex d-lg-none justify-content-between align-items-center">
                         <a href="#">
@@ -85,15 +91,55 @@
                             <div class="col-lg-4">
                                 <div class="card rounded-0 px-5 border-0">
                                     <div class="card-body text-center">
-                                        <img src="./assets/images/bird.png" alt="">
+                                        <img src="./assets/images/bird.png" alt="" class="mb-40">
                                         <p class="card-text">
                                             לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית גולר מונפרר סוברט לורם
                                             שבצק יהול, לכנוץ בעריר גק ליץ, ושבעגט ליבם
                                             סולגק. בראיט ולחת צורק מונחף, בגורמי מגמש. תרבנך וסתעד לכנו סתשם השמה - לתכי
                                             מורגם בורק? לתיג ישבעס.
                                         </p>
-                                        <img src="./assets/carousel3.png" alt="">
-                                        <p class="text-dark">
+                                        <img src="./assets/carousel3.png" alt="" class="carousel-card-img">
+                                        <p class="text-dark fw-bold mt-">
+                                            שם הממליץ
+                                        </p>
+                                        <p class="text-white">
+                                            מה התפקיד בשורה אחת
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="card rounded-0 px-5 border-0">
+                                    <div class="card-body text-center">
+                                        <img src="./assets/images/bird.png" alt="" class="mb-40">
+                                        <p class="card-text">
+                                            לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית גולר מונפרר סוברט לורם
+                                            שבצק יהול, לכנוץ בעריר גק ליץ, ושבעגט ליבם
+                                            סולגק. בראיט ולחת צורק מונחף, בגורמי מגמש. תרבנך וסתעד לכנו סתשם השמה - לתכי
+                                            מורגם בורק? לתיג ישבעס.
+                                        </p>
+                                        <img src="./assets/carousel2.png" alt="" class="carousel-card-img">
+                                        <p class="text-dark fw-bold mt-">
+                                            שם הממליץ
+                                        </p>
+                                        <p class="text-white">
+                                            מה התפקיד בשורה אחת
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="card rounded-0 px-5 border-0">
+                                    <div class="card-body text-center">
+                                        <img src="./assets/images/bird.png" alt="" class="mb-40">
+                                        <p class="card-text">
+                                            לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית גולר מונפרר סוברט לורם
+                                            שבצק יהול, לכנוץ בעריר גק ליץ, ושבעגט ליבם
+                                            סולגק. בראיט ולחת צורק מונחף, בגורמי מגמש. תרבנך וסתעד לכנו סתשם השמה - לתכי
+                                            מורגם בורק? לתיג ישבעס.
+                                        </p>
+                                        <img src="./assets/carousel1.png" alt="" class="carousel-card-img">
+                                        <p class="text-dark fw-bold mt-">
                                             שם הממליץ
                                         </p>
                                         <p class="text-white">
@@ -104,11 +150,133 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item" data-bs-interval="2000">
-                        <img src="./assets/images/Mask Group 8@2x.png" class="d-block w-100" alt="...">
+                    <div class="carousel-item active" data-bs-interval="10000">
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <div class="card rounded-0 px-5 border-0">
+                                    <div class="card-body text-center">
+                                        <img src="./assets/images/bird.png" alt="" class="mb-40">
+                                        <p class="card-text">
+                                            לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית גולר מונפרר סוברט לורם
+                                            שבצק יהול, לכנוץ בעריר גק ליץ, ושבעגט ליבם
+                                            סולגק. בראיט ולחת צורק מונחף, בגורמי מגמש. תרבנך וסתעד לכנו סתשם השמה - לתכי
+                                            מורגם בורק? לתיג ישבעס.
+                                        </p>
+                                        <img src="./assets/carousel3.png" alt="" class="carousel-card-img">
+                                        <p class="text-dark fw-bold mt-">
+                                            שם הממליץ
+                                        </p>
+                                        <p class="text-white">
+                                            מה התפקיד בשורה אחת
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="card rounded-0 px-5 border-0">
+                                    <div class="card-body text-center">
+                                        <img src="./assets/images/bird.png" alt="" class="mb-40">
+                                        <p class="card-text">
+                                            לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית גולר מונפרר סוברט לורם
+                                            שבצק יהול, לכנוץ בעריר גק ליץ, ושבעגט ליבם
+                                            סולגק. בראיט ולחת צורק מונחף, בגורמי מגמש. תרבנך וסתעד לכנו סתשם השמה - לתכי
+                                            מורגם בורק? לתיג ישבעס.
+                                        </p>
+                                        <img src="./assets/carousel2.png" alt="" class="carousel-card-img">
+                                        <p class="text-dark fw-bold mt-">
+                                            שם הממליץ
+                                        </p>
+                                        <p class="text-white">
+                                            מה התפקיד בשורה אחת
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="card rounded-0 px-5 border-0">
+                                    <div class="card-body text-center">
+                                        <img src="./assets/images/bird.png" alt="" class="mb-40">
+                                        <p class="card-text">
+                                            לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית גולר מונפרר סוברט לורם
+                                            שבצק יהול, לכנוץ בעריר גק ליץ, ושבעגט ליבם
+                                            סולגק. בראיט ולחת צורק מונחף, בגורמי מגמש. תרבנך וסתעד לכנו סתשם השמה - לתכי
+                                            מורגם בורק? לתיג ישבעס.
+                                        </p>
+                                        <img src="./assets/carousel1.png" alt="" class="carousel-card-img">
+                                        <p class="text-dark fw-bold mt-">
+                                            שם הממליץ
+                                        </p>
+                                        <p class="text-white">
+                                            מה התפקיד בשורה אחת
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="carousel-item">
-                        <img src="./assets/images/Mask Group 4@2x.png" class="d-block w-100" alt="...">
+                    <div class="carousel-item active" data-bs-interval="10000">
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <div class="card rounded-0 px-5 border-0">
+                                    <div class="card-body text-center">
+                                        <img src="./assets/images/bird.png" alt="" class="mb-40">
+                                        <p class="card-text">
+                                            לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית גולר מונפרר סוברט לורם
+                                            שבצק יהול, לכנוץ בעריר גק ליץ, ושבעגט ליבם
+                                            סולגק. בראיט ולחת צורק מונחף, בגורמי מגמש. תרבנך וסתעד לכנו סתשם השמה - לתכי
+                                            מורגם בורק? לתיג ישבעס.
+                                        </p>
+                                        <img src="./assets/carousel3.png" alt="" class="carousel-card-img">
+                                        <p class="text-dark fw-bold mt-">
+                                            שם הממליץ
+                                        </p>
+                                        <p class="text-white">
+                                            מה התפקיד בשורה אחת
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="card rounded-0 px-5 border-0">
+                                    <div class="card-body text-center">
+                                        <img src="./assets/images/bird.png" alt="" class="mb-40">
+                                        <p class="card-text">
+                                            לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית גולר מונפרר סוברט לורם
+                                            שבצק יהול, לכנוץ בעריר גק ליץ, ושבעגט ליבם
+                                            סולגק. בראיט ולחת צורק מונחף, בגורמי מגמש. תרבנך וסתעד לכנו סתשם השמה - לתכי
+                                            מורגם בורק? לתיג ישבעס.
+                                        </p>
+                                        <img src="./assets/carousel2.png" alt="" class="carousel-card-img">
+                                        <p class="text-dark fw-bold mt-">
+                                            שם הממליץ
+                                        </p>
+                                        <p class="text-white">
+                                            מה התפקיד בשורה אחת
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="card rounded-0 px-5 border-0">
+                                    <div class="card-body text-center">
+                                        <img src="./assets/images/bird.png" alt="" class="mb-40">
+                                        <p class="card-text">
+                                            לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית גולר מונפרר סוברט לורם
+                                            שבצק יהול, לכנוץ בעריר גק ליץ, ושבעגט ליבם
+                                            סולגק. בראיט ולחת צורק מונחף, בגורמי מגמש. תרבנך וסתעד לכנו סתשם השמה - לתכי
+                                            מורגם בורק? לתיג ישבעס.
+                                        </p>
+                                        <img src="./assets/carousel1.png" alt="" class="carousel-card-img">
+                                        <p class="text-dark fw-bold mt-">
+                                            שם הממליץ
+                                        </p>
+                                        <p class="text-white">
+                                            מה התפקיד בשורה אחת
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
