--- a/single-block-2.html
+++ b/single-block-2.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./assets/bootstrap-5.2.0-beta1-dist/css/bootstrap.min.css">
     <script src="./assets/bootstrap-5.2.0-beta1-dist/js/bootstrap.min.js" defer></script>
     <link rel="stylesheet" href="./assets/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -26,19 +28,23 @@
             <div class="collapse navbar-collapse flex-grow-0" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">דברו איתי</a>
+                        <a class="nav-link px-3" href="index.html">דברו איתי</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">הרצאות וסדנאות</a>
+                        <a class="nav-link px-3" href="help.html">
+                            הרצאות וסדנאות
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">האימון שלי</a>
+                        <a class="nav-link px-3" href="gallery.html">האימון שלי</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">בלוג</a>
+                        <a class="nav-link px-3" href="single-block.html">בלוג</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">אודות</a>
+                        <a class="nav-link active px-3" href="single-block-2.html">
+                            אודות
+                        </a>
                     </li>
                     <div class="social-links d-flex d-lg-none justify-content-between align-items-center">
                         <a href="#">
