fixed issues on the home page

--- a/index.html
+++ b/index.html
@@ -227,12 +227,12 @@
         </div>
         <img src="./assets/images/BIRD1.png" alt="" class="home-bird-right position-absolute">
     </section>
-    <section class="section-opinion container-fluid" dir="ltr">
-        <div class="row d-flex mb-40">
-            <div class="col-md-4 section-opinion-img px-0">
-                <img src="./assets/images/Mask Group 8.png" alt="" class="">
+    <section class="section-opinion" dir="ltr">
+        <div class="d-flex mb-40">
+            <div class="section-opinion-img px-0 overflow-hidden">
+                <img src="./assets/images/Mask Group 8.png" alt="img" class="woman-hand-off">
             </div>
-            <div class="col-md-6 section-opinion__review offset-1 text-dark d-flex flex-column justify-content-center"
+            <div class="section-opinion__review text-dark d-flex flex-column justify-content-center"
                 dir="rtl">
                 <h2 class="fw-bold mb-4">שם הרצאה שניה</h2>
                 <p class="mb-4">
@@ -247,13 +247,13 @@
             </div>
 
         </div>
-        <div class="row d-flex pt-1">
-            <div class="col-md-4 section-opinion-img px-0">
+        <div class="d-flex">
+            <div class="section-opinion-img overflow-hidden px-0">
                 <div class="">
                     <img src="./assets/images/Mask Group 12.png" alt="img">
                 </div>
             </div>
-            <div class="col-md-6 offset-1 section-opinion__review text-dark d-flex flex-column justify-content-center"
+            <div class="section-opinion__review text-dark d-flex flex-column justify-content-center"
                 dir="rtl">
                 <h2 class="fw-bold mb-4">שם הרצאה שניה</h2>
                 <p class="mb-4">
