--- a/gallery.html
+++ b/gallery.html
@@ -76,23 +76,62 @@
         </div>
 
     </nav>
-    <div class="sblog-section-hero container-fluid">
+    <div class="gallery-section-hero container-fluid">
     </div>
-    <div class="sblog-section-blog container-fluid">
-        <div class="row mx-0">
-            <div class="col-lg-6">
-                <div class="row">
-                    <div class="col-lg-4"></div>
-                    <div class="col-lg-4"></div>
-                    <div class="col-lg-4"></div>
+    <div class="gallery-section-gallery container-fluid">
+        <h1 class="text-center fst-italic" dir="ltr">קראו על העולם שלי</h1>
+        <div class="container">
+            <div class="row mb-4">
+                <div class="col-lg-4">
+                    <div class="card position-relative">
+                        <img src="./assets/images/Mask Group 1.png" alt="">
+                        <div class="card-body position-absolute text-center">
+                            <h5 class="text-white fw-bold">כותרת</h5>
+                        </div>
+                    </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-12"></div>
+                <div class="col-lg-4">
+                    <div class="card position-relative">
+                        <img src="./assets/images/Mask Group 1.png" alt="">
+                        <div class="card-body position-absolute text-center">
+                            <h5 class="text-white fw-bold">כותרת</h5>
+                        </div>
+                    </div>
                 </div>
-
+                <div class="col-lg-4">
+                    <div class="card position-relative">
+                        <img src="./assets/images/Mask Group 1.png" alt="">
+                        <div class="card-body position-absolute text-center">
+                            <h5 class="text-white fw-bold">כותרת</h5>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-5">
-                <div class="sblog-section-blog__article"></div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="card position-relative">
+                        <img src="./assets/images/Mask Group 1.png" alt="">
+                        <div class="card-body position-absolute text-center">
+                            <h5 class="text-white fw-bold">כותרת</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card position-relative">
+                        <img src="./assets/images/Mask Group 1.png" alt="">
+                        <div class="card-body position-absolute text-center">
+                            <h5 class="text-white fw-bold">כותרת</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card position-relative">
+                        <img src="./assets/images/Mask Group 1.png" alt="">
+                        <div class="card-body position-absolute text-center">
+                            <h5 class="text-white fw-bold">כותרת</h5>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
