--- a/single-block-2.html
+++ b/single-block-2.html
@@ -78,25 +78,75 @@
     </nav>
     <div class="sblog-section-hero container-fluid">
     </div>
-    <div class="sblog-section-blog container-fluid">
-        <div class="row mx-0">
-            <div class="col-lg-6">
-                <div class="row">
-                    <div class="col-lg-4"></div>
-                    <div class="col-lg-4"></div>
-                    <div class="col-lg-4"></div>
+    <div class="sblog2-section-main">
+        <div class="inner-container d-flex flex-row">
+            <div class="img-container">
+                <div class="d-flex secondary-img-container">
+                    <img src="./assets/images/blog-hero.png" alt="" class="secondary-img">
+                    <img src="./assets/images/blog-hero.png" alt="" class="secondary-img">
+                    <img src="./assets/images/blog-hero.png" alt="" class="secondary-img">
                 </div>
-                <div class="row">
-                    <div class="col-lg-12"></div>
-                </div>
+                <img src="./assets/images/blog-hero.png" alt="img blog" class="main-img">
+                <div class="carousel-container">
+                    <div class="track">
+                        <div class="card-container">
+                            <div class="card">
+                                <div class="card-img-top">
 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
             </div>
-            <div class="col-lg-5">
-                <div class="sblog-section-blog__article"></div>
+            <div class="text-container">
+                <h1 class="mb-0 text-right">
+                    כותרת הכתבה
+                </h1>
+                <p class="date">
+                    יוני 15, 2022
+                </p>
+                <p>
+                    לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש בליא, מנסוטו צמלח לביקו ננבי, צמוקו בלוקריה שיצמה ברורק.
+                    קוואזי במר מודוף.
+                    אודיפו בלאסטיק מונופץ קליר, בנפת נפקט למסון בלרק - וענוף לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש
+                    בליא, מנסוטו צמלח לביקו
+                    ננבי, צמוקו בלוקריה שיצמה ברורק. קולורס מונפרד אדנדום סילקוף, מרגשי ומרגשח.
+                </p>
+                <p>
+                    עמחליף קונסקטורר אדיפיסינג אלית. סת אלמנקום
+                    ניסי נון ניבאה. דס איאקוליס וולופטה דיאם. וסטיבולום אט דולור, קראס אגת לקטוס וואל אאוגו וסטיבולום
+                    סוליסי טידום בעליק.
+                    קונדימנטום קורוס בליקרה, נונסטי קלובר בריקנה סטום, לפריקך תצטריק לרטי.
+                </p>
+                <h2 class="blue-text">
+                    כותרת משנה
+                </h2>
+                <p>
+                    לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש בליא, מנסוטו צמלח לביקו ננבי, צמוקו בלוקריה שיצמה ברורק.
+                    קוואזי במר מודוף.
+                    אודיפו בלאסטיק מונופץ קליר, בנפת נפקט למסון בלרק - וענוף לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש
+                    בליא, מנסוטו צמלח לביקו
+                    ננבי, צמוקו בלוקריה שיצמה ברורק.
+                </p>
+                <p>
+                    קולורס מונפרד אדנדום סילקוף, מרגשי ומרגשח. עמחליף קונסקטורר אדיפיסינג אלית. סת אלמנקום
+                    ניסי נון ניבאה. דס איאקוליס וולופטה דיאם. וסטיבולום אט דולור, קראס אגת לקטוס וואל אאוגו וסטיבולום
+                    סוליסי טידום בעליק.
+                    קונדימנטום קורוס בליקרה, נונסטי קלובר בריקנה סטום, לפריקך תצטריק לרטי. קולורס מונפרד אדנדום סילקוף,
+                    מרגשי ומרגשח.
+                    עמחליף
+                    קונסקטורר אדיפיסינג אלית. סת אלמנקום ניסי נון ניבאה. דס איאקוליס וולופטה דיאם. וסטיבולום אט דולור,
+                    קראס אגת לקטוס וואל
+                    אאוגו וסטיבולום סוליסי טידום בעליק. קונדימנטום קורוס בליקרה, נונסטי קלובר בריקנה סטום, לפריקך תצטריק
+                    לרטי.
+                </p>
             </div>
         </div>
+
     </div>
-    <div class="sblog-section-subscribe .container-fluid text-center">
+    <div class="sblog-section-subscribe container-fluid text-center">
         <h1>
             ?אהבת את מה שקראת
         </h1>
