gallery is ready

--- a/gallery.html
+++ b/gallery.html
@@ -76,72 +76,67 @@
         </div>
 
     </nav>
-    <div class="gallery-section-hero container-fluid">
-    </div>
-    <div class="gallery-section-gallery container-fluid">
-        <h1 class="text-center fst-italic" dir="ltr">קראו על העולם שלי</h1>
-        <div class="container">
-            <div class="row mb-4">
-                <div class="col-lg-4">
-                    <div class="card position-relative">
-                        <img src="./assets/images/Mask Group 1.png" alt="">
-                        <div class="card-body position-absolute text-center">
-                            <h5 class="text-white fw-bold">כותרת</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="card position-relative">
-                        <img src="./assets/images/Mask Group 1.png" alt="">
-                        <div class="card-body position-absolute text-center">
-                            <h5 class="text-white fw-bold">כותרת</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="card position-relative">
-                        <img src="./assets/images/Mask Group 1.png" alt="">
-                        <div class="card-body position-absolute text-center">
-                            <h5 class="text-white fw-bold">כותרת</h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4">
-                    <div class="card position-relative">
-                        <img src="./assets/images/Mask Group 1.png" alt="">
-                        <div class="card-body position-absolute text-center">
-                            <h5 class="text-white fw-bold">כותרת</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="card position-relative">
-                        <img src="./assets/images/Mask Group 1.png" alt="">
-                        <div class="card-body position-absolute text-center">
-                            <h5 class="text-white fw-bold">כותרת</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="card position-relative">
-                        <img src="./assets/images/Mask Group 1.png" alt="">
-                        <div class="card-body position-absolute text-center">
-                            <h5 class="text-white fw-bold">כותרת</h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div id="gallery-section-hero" class="help-section-hero container-fluid px-0">
+        <div class="help-section-hero-overlay d-flex align-items-center justify-content-center">
+            <h1 class="font-italic">כותרת / ציטוט</h1>
         </div>
     </div>
-    <div class="sblog-section-subscribe .container-fluid text-center">
-        <h1>
+    <div class="gallery-section-gallery container-fluid">
+        <h2 class="gallery-title text-center font-italic" dir="ltr">קראו על העולם שלי</h2>
+        <div class="gallery-card-container d-flex flex-wrap mx-auto mb-4 justify-content-center">
+
+            <div class="card border-0 position-relative">
+                <img src="./assets/images/gallery-21.png" alt="gallery-img">
+                <div class="card-body position-absolute text-center py-1 px-0">
+                    <h3 class="text-white m-0 py-3 fw-bold">כותרת</h3>
+                </div>
+            </div>
+            <div class="card border-0 position-relative">
+                <img src="./assets/images/gallery-20.png" alt="gallery-img">
+                <div class="card-body position-absolute text-center py-1 px-0">
+                    <h3 class="text-white m-0 py-3 fw-bold">כותרת</h3>
+                </div>
+            </div>
+            <div class="card border-0  position-relative">
+                <img src="./assets/images/gallery-18.png" alt="gallery-img">
+                <div class="card-body position-absolute text-center py-1 px-0">
+                    <h3 class="text-white m-0 py-3 fw-bold">כותרת</h3>
+                </div>
+            </div>
+            <div class="card border-0 position-relative">
+                <img src="./assets/images/gallery-24.png" alt="">
+                <div class="card-body position-absolute text-center py-1 px-0">
+                    <h3 class="text-white m-0 py-3 fw-bold">כותרת</h3>
+                </div>
+            </div>
+            <div class="card  border-0 position-relative">
+                <img src="./assets/images/gallery-23.png" alt="gallery-img">
+                <div class="card-body position-absolute text-center py-1 px-0">
+                    <h3 class="text-white m-0 py-3 fw-bold">כותרת</h3>
+                </div>
+            </div>
+
+            <div class="card border-0 position-relative">
+                <img src="./assets/images/gallery-22.png" alt="gallery-img">
+                <div class="card-body position-absolute text-center py-1 px-0">
+                    <h3 class="text-white m-0 py-3 fw-bold">כותרת</h3>
+                </div>
+            </div>
+
+        </div>
+        <div class="gallery-pagination d-flex justify-content-center">
+            <button class="btn rounded-circle active text-white  p-0">1</button>
+            <button class="btn rounded-circle text-white p-0">2</button>
+            <button class="btn rounded-circle text-white p-0">3</button>
+        </div>
+    </div>
+    <div class="sblog-section-subscribe overflow-hidden container-fluid text-center position-relative">
+        <h2 class="mb-4 sblog-title">
             ?אהבת את מה שקראת
-        </h1>
+        </h2>
         <div class="row mx-0">
             <div class="col-lg-5 mx-auto">
-                <p>
+                <p class="sblog-description mx-auto">
                     לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש בליא, מנסוטו צמלח לביקו ננבי, צמוקו בלוקריה שיצמה ברורק.
                     קוואזי במר
                     מודוף.
@@ -150,18 +145,17 @@
                 </p>
             </div>
         </div>
-        <div class="row mx-0">
-            <div class="col-lg-6 mx-auto">
-                <form action="" class="subscribe-form mb-4">
-                    <input type="text" class="form-control bg-transparent text-light border-1 border-light rounded-0"
-                        placeholder="כתובת מייל">
-                    <button type="submit" class="btn bg-light mt-3 w-100 rounded-0">אני רוצה להרשם</button>
-                </form>
-                <p>
-                    הערה חשובה פה למטה בכוכבית *
-                </p>
-            </div>
+        <div class="row justify-content-center mx-0">
+            <form action="" class="subscribe-form mb-4">
+                <input type="text" class="form-control bg-transparent text-light border-1 border-light rounded-0"
+                    placeholder="כתובת מייל">
+                <button type="submit" class="btn mt-3 w-100 rounded-0">אני רוצה להרשם</button>
+            </form>
+            <p>
+                הערה חשובה פה למטה בכוכבית *
+            </p>
         </div>
+        <img id="gallery-sblog-bird-left" class="position-absolute" src="./assets/images/bird-grey.svg" alt="bird-gray">
     </div>
 </body>
 
