--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     </span>
                 </button>
             </div>
-            <img class="home-bird-left position-absolute" src="./assets/images/BIRD GREY.svg" alt="home-bird">
+            <img class="home-bird-left position-absolute" src="./assets/images/bird-grey.svg" alt="home-bird">
         </div>
     </section>
     <section class="section-card container-fluid position-relative">
