--- a/help.html
+++ b/help.html
@@ -76,7 +76,7 @@
         </div>
     </nav>
 
-    <div id="help-section-hero" class="help-section-hero gallery-section-hero container-fluid px-0">
+    <div id="help-section-hero" class="help-section-hero container-fluid px-0">
         <div class="help-section-hero-overlay d-flex align-items-center justify-content-center">
             <h1 class="font-italic">כותרת / ציטוט</h1>
         </div>
@@ -316,7 +316,7 @@
             <form action="" class="subscribe-form mb-4">
                 <input type="text" class="form-control bg-transparent text-light border-1 border-light rounded-0"
                     placeholder="כתובת מייל">
-                <button type="submit" class="btn bg-light mt-3 w-100 rounded-0">אני רוצה להרשם</button>
+                <button type="submit" class="btn mt-3 w-100 rounded-0">אני רוצה להרשם</button>
             </form>
             <p>
                 הערה חשובה פה למטה בכוכבית *
