--- a/single-block.html
+++ b/single-block.html
@@ -76,7 +76,10 @@
         </div>
 
     </nav>
-    <div class="sblog-section-hero container-fluid">
+    <div id="sblog-section-hero" class="help-section-hero container-fluid px-0">
+        <div class="help-section-hero-overlay d-flex align-items-center justify-content-center">
+            <h1 class="font-italic">כותרת / ציטוט</h1>
+        </div>
     </div>
     <div class="sblog-section-blog container-fluid">
         <div class="row mx-0">
@@ -96,7 +99,7 @@
             </div>
         </div>
     </div>
-    <div class="sblog-section-subscribe .container-fluid text-center">
+    <div class="sblog-section-subscribe container-fluid text-center">
         <h1>
             ?אהבת את מה שקראת
         </h1>
@@ -115,7 +118,7 @@
             <form action="" class="subscribe-form mb-4">
                 <input type="text" class="form-control bg-transparent text-light border-1 border-light rounded-0"
                     placeholder="כתובת מייל">
-                <button type="submit" class="btn bg-light mt-3 w-100 rounded-0">אני רוצה להרשם</button>
+                <button type="submit" class="btn mt-3 w-100 rounded-0">אני רוצה להרשם</button>
             </form>
             <p>
                 הערה חשובה פה למטה בכוכבית *
